# agent-diff

./: .gitattributes  .gitignore  README.md  calendar_500_errors_analysis.json  calendar_error_analysis.json
backend/: AI_AGENT_INTEGRATION.md  CHANGELOG.md  Dockerfile  Dockerfile.local  Dockerfile.railway  LINEAR_CRUD_SUMMARY.md  pyproject.toml  railway.toml  test_graphql_server.py  verify_install.py
backend/examples/: clean_api_demo.py  linear_crud_demo.py
backend/src/eval_platform/: eval_environment.py  eval_utilities.py  logging_config.py  pydantic_mixin.py
backend/src/eval_platform/api/: auth.py  errors.py  main.py  middleware.py  models.py  resolvers.py  routes.py
backend/src/eval_platform/db/: schema.py
backend/src/eval_platform/evaluationEngine/: README.md  assertion.py  compiler.py  core.py  differ.py  dsl_schema.json  models.py  replication.py
backend/src/platform/: logging_config.py
backend/src/platform/api/: auth.py  (+4 more)
backend/tests/: conftest.py  load_test.py  test_ai_sdk_integration.py  test_calendar_sqlite_integration.py  test_clean_api.py  test_linear_sqlite_integration.py  test_slack_sqlite_integration.py  test_sqlite_integration.py  test_tools.py
backend/tests/integration/: test_cleanup_service.py  test_linear_api.py  test_slack_api.py  test_slack_api_docs.py
backend/tests/validation/: setup_google_calendar_test_data.py  test_box_parity.py  test_calendar_parity_comprehensive.py
backend/utils/: fix_replica_identity.py  fix_replica_identity.sql  seed_box_template.py  seed_calendar_template.py  seed_linear_template.py  seed_tests.py
(+222 files in other folders)
