[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-the-universe"
version = "0.1.0"
description = "Matrix For AI Agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.5",
    "ariadne>=0.26.2",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.18",
    "requests>=2.32.5",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
addopts = ["--tb=short"]
